--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Lista 2/Ex8/nbproject/private/
 /Lista 2/Ex10/nbproject/private/
 /Lista 2/Ex11/nbproject/private/
+/Lista 2/Ex18/nbproject/private/
