Lista 3 - First Commit

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /Lista 2/Ex10/nbproject/private/
 /Lista 2/Ex11/nbproject/private/
 /Lista 2/Ex18/nbproject/private/
+/Lista 2/Ex1/nbproject/private/
+/Lista 2/Robot/nbproject/private/
+/Lista 2/Robot/build/
+/Lista 3/HTML5Application/nbproject/private/
+/Lista 3/Ex2/nbproject/private/
