--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /Lista 2/Robot/build/
 /Lista 3/HTML5Application/nbproject/private/
 /Lista 3/Ex2/nbproject/private/
+/Lista 3/Ex3/nbproject/private/
+/Lista 3/Ex4/nbproject/private/
+/Lista 3/Ex5/nbproject/private/
+/Lista 3/Ex1/nbproject/private/
+/Lista 3/Ex6/nbproject/private/
