--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /Lista 3/Ex5/nbproject/private/
 /Lista 3/Ex1/nbproject/private/
 /Lista 3/Ex6/nbproject/private/
+/Lista 3/Ex7/nbproject/private/
+/Lista 3/Ex8/nbproject/private/
