--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /Lista 3/Ex6/nbproject/private/
 /Lista 3/Ex7/nbproject/private/
 /Lista 3/Ex8/nbproject/private/
+/Lista 4/Ex1/nbproject/private/
+/Lista 4/Ex2/nbproject/private/
