--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /Lista 3/Ex8/nbproject/private/
 /Lista 4/Ex1/nbproject/private/
 /Lista 4/Ex2/nbproject/private/
+/Lista 4/Ex3/nbproject/private/
+/Lista 4/Ex4/nbproject/private/
+/Lista 4/Ex5/nbproject/private/
