--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /Lista 4/Ex3/nbproject/private/
 /Lista 4/Ex4/nbproject/private/
 /Lista 4/Ex5/nbproject/private/
+/Atividade1/Atividade1/nbproject/private/
